--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "moment": "^2.29.1",
     "next": "latest",
     "react": "^17.0.2",
+    "react-countup": "^5.2.0",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
