--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "moment": "^2.29.1",
     "next": "latest",
+    "next-themes": "^0.0.15",
     "react": "^17.0.2",
     "react-countup": "^5.2.0",
     "react-dom": "^17.0.2"
